# dust-python-client

./: .coveragerc  .env.example  .gitignore  LICENCE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
docs/: conversations.md  index.md  installation.md  quickstart.md
docs/examples/: agents.md  conversations.md
examples/: agents.py  chat.py  conversations.py  init.py
src/dust_client/: __init__.py  client.py  config.py  exceptions.py  utils.py
src/dust_client/agents/: client.py  models.py
src/dust_client/chat/: client.py  exceptions.py  models.py
src/dust_client/conversations/: client.py  exceptions.py  models.py
src/dust_sdk/: __init__.py  client.py
src/dust_sdk/agents/: client.py  models.py
src/dust_sdk/conversations/: client.py  exceptions.py
tests/: conftest.py  test_chat_client.py  test_conversations_client.py
